--- a/Mix.css
+++ b/Mix.css
@@ -35,7 +35,7 @@ body {
   background: transparent;
 }
 .appMount_ea7e65 {
-  background: #000 url("https://s12.gifyu.com/images/SDDkG.gif") center/cover no-repeat;
+  background: #000 url("https://s12.gifyu.com/images/SDDkj.md.gif") center/cover no-repeat;
 }
 .app_a01fb1 {
   background: transparent;
