--- a/Mix.css
+++ b/Mix.css
@@ -5,14 +5,14 @@
   * @description A pack that combines things I've created and liked the look of.
 **/
 :root {
-  --modal-background: rgba(40,42,44,0.8);
-  --background-primary: rgba(30,32,34,0.8);
+  --modal-background: rgba(0, 0, 0, 0.8);
+  --background-primary: rgba(0, 0, 0, 0.8);
   --background-secondary: rgba(30,32,34,0.6);
   --background-secondary-alt: rgba(20,22,24,0.6);
   --background-tertiary: rgba(20,22,24,0.5);
   --background-floating: rgba(30,32,34,0.8);
-  --background-accent: rgba(60,62,64,0.8);
-  --background-modifier-accent: rgba(60,62,64,0.6);
+  --background-accent: rgba(0, 0, 0, 0.8);
+  --background-modifier-accent: rgba(0, 0, 0, 0.6);
   --background-modifier-hover: rgba(40,100,200,0.4);
   --background-modifier-selected: rgba(60,62,64,0.6);
   --brand-experiment: rgba(40,100,200,0.8);
@@ -26,7 +26,7 @@
   --Memberlist-Header: rgba(80,82,84,0.4);
   --Memberlist-Avatar: rgba(30,32,34,0.4);
   --Memberlist-Scrollbar: rgba(60,62,64,0.2);
-  --Memberlist-Scrollbar-Thumb: rgba(30,30,30,0.4);
+  --Memberlist-Scrollbar-Thumb: rgba(0, 0, 0, 0.4);
 }
 html {
   background: transparent;
@@ -35,13 +35,13 @@ body {
   background: transparent;
 }
 .appMount_ea7e65 {
-  background: #000 url("https://s12.gifyu.com/images/SDDkj.md.gif") center/cover no-repeat;
+  background: #000 url("https://i.ibb.co/4VFMg5R/giphy.gif") center/cover no-repeat;
 }
 .app_a01fb1 {
   background: transparent;
 }
 .bg_d4b6c5 {
-  background: rgba(40,42,44,0.8);
+  background: rgba(0, 0, 0, 0.8);
 }
 .layer_d4b6c5 {
   background: transparent;
@@ -63,11 +63,11 @@ body {
   display: none;
 }
 .guilds_a4d4d9 {
-  --background-primary: rgba(30,32,34,0.8);
-  --background-secondary: rgba(30,32,34,0.8);
+  --background-primary: rgba(0, 0, 0, 0.8);
+  --background-secondary: rgba(0, 0, 0, 0.8);
   --text-normal: #c8c8c8;
   --brand-experiment: #2864c8;
-  background: rgba(40,42,44,0.3);
+  background: rgba(0, 0, 0, 0.3);
 }
 .guilds_a4d4d9 .scroller_fea3ef {
   background: transparent;
